--- a/app.yaml
+++ b/app.yaml
@@ -15,7 +15,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
- name: k8s-activity-yourname #change this
+ name: KUBER_ABAJA
  labels:
  app: nginx
 spec:
@@ -31,7 +31,7 @@ spec:
  initContainers:
  - name: init-html
  image: curlimages/curl
- command: ["sh", "-c", "curl -o /usr/share/nginx/html/index.html https://raw.githubusercontent.com/<your username>/<repository name>/<branch name>/index.html"] #change this
+ command: ["sh", "-c", "curl -o /usr/share/nginx/html/index.html https://raw.githubusercontent.com/NROLP/Kuber_Act/main/index.html"] #change this
  volumeMounts:
  - name: html-volume
  mountPath: /usr/share/nginx/html
@@ -44,4 +44,5 @@ spec:
  - name: html-volume
  mountPath: /usr/share/nginx/html
  volumes:
- - name: html-vo
+ - name: html-volume
+ emptyDir: {}
