--- a/app.yaml
+++ b/app.yaml
@@ -15,7 +15,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
- name: KUBER_ABAJA
+ name: Kuber-Acts
  labels:
  app: nginx
 spec:
@@ -31,7 +31,7 @@ spec:
  initContainers:
  - name: init-html
  image: curlimages/curl
- command: ["sh", "-c", "curl -o /usr/share/nginx/html/index.html  https://raw.githubusercontent.com/NROLP/Kuber_Act/main/index.html"]
+ command: ["sh", "-c", "curl -o /usr/share/nginx/html/index.html https://raw.githubusercontent.com/NROLP/Kuber_Act/main/index.html"]
  volumeMounts:
  - name: html-volume
  mountPath: /usr/share/nginx/html
